hphp/test/zend/good/ext/iconv/tests/eucjp2sjis.php
<?hh
<<__EntryPoint>> function main(): void {
/* include('test.inc'); */
/* charset=EUC-JP */

$str = "
\xc6\xfc\xcb\xdc\xb8\xec\xa5\xc6\xa5\xad\xa5\xb9\xa5\xc8\xa4\xc8English Text
\xc6\xfc\xcb\xdc\xb8\xec\xa5\xc6\xa5\xad\xa5\xb9\xa5\xc8\xa4\xc8English Text
\xc6\xfc\xcb\xdc\xb8\xec\xa5\xc6\xa5\xad\xa5\xb9\xa5\xc8\xa4\xc8English Text
\xc6\xfc\xcb\xdc\xb8\xec\xa5\xc6\xa5\xad\xa5\xb9\xa5\xc8\xa4\xc8English Text
\xc6\xfc\xcb\xdc\xb8\xec\xa5\xc6\xa5\xad\xa5\xb9\xa5\xc8\xa4\xc8English Text
\xc6\xfc\xcb\xdc\xb8\xec\xa5\xc6\xa5\xad\xa5\xb9\xa5\xc8\xa4\xc8English Text
\xc6\xfc\xcb\xdc\xb8\xec\xa5\xc6\xa5\xad\xa5\xb9\xa5\xc8\xa4\xc8English Text
\xc6\xfc\xcb\xdc\xb8\xec\xa5\xc6\xa5\xad\xa5\xb9\xa5\xc8\xa4\xc8English Text
\xc6\xfc\xcb\xdc\xb8\xec\xa5\xc6\xa5\xad\xa5\xb9\xa5\xc8\xa4\xc8English Text
\xc6\xfc\xcb\xdc\xb8\xec\xa5\xc6\xa5\xad\xa5\xb9\xa5\xc8\xa4\xc8English Text
\xc6\xfc\xcb\xdc\xb8\xec\xa5\xc6\xa5\xad\xa5\xb9\xa5\xc8\xa4\xc8English Text
\xc6\xfc\xcb\xdc\xb8\xec\xa5\xc6\xa5\xad\xa5\xb9\xa5\xc8\xa4\xc8English Text
\xc6\xfc\xcb\xdc\xb8\xec\xa5\xc6\xa5\xad\xa5\xb9\xa5\xc8\xa4\xc8English Text
\xc6\xfc\xcb\xdc\xb8\xec\xa5\xc6\xa5\xad\xa5\xb9\xa5\xc8\xa4\xc8English Text
\xc6\xfc\xcb\xdc\xb8\xec\xa5\xc6\xa5\xad\xa5\xb9\xa5\xc8\xa4\xc8English Text
\xc6\xfc\xcb\xdc\xb8\xec\xa5\xc6\xa5\xad\xa5\xb9\xa5\xc8\xa4\xc8English Text
\xc6\xfc\xcb\xdc\xb8\xec\xa5\xc6\xa5\xad\xa5\xb9\xa5\xc8\xa4\xc8English Text
\xc6\xfc\xcb\xdc\xb8\xec\xa5\xc6\xa5\xad\xa5\xb9\xa5\xc8\xa4\xc8English Text
\xc6\xfc\xcb\xdc\xb8\xec\xa5\xc6\xa5\xad\xa5\xb9\xa5\xc8\xa4\xc8English Text
\xc6\xfc\xcb\xdc\xb8\xec\xa5\xc6\xa5\xad\xa5\xb9\xa5\xc8\xa4\xc8English Text
\xc6\xfc\xcb\xdc\xb8\xec\xa5\xc6\xa5\xad\xa5\xb9\xa5\xc8\xa4\xc8English Text
\xc6\xfc\xcb\xdc\xb8\xec\xa5\xc6\xa5\xad\xa5\xb9\xa5\xc8\xa4\xc8English Text
\xc6\xfc\xcb\xdc\xb8\xec\xa5\xc6\xa5\xad\xa5\xb9\xa5\xc8\xa4\xc8English Text
\xc6\xfc\xcb\xdc\xb8\xec\xa5\xc6\xa5\xad\xa5\xb9\xa5\xc8\xa4\xc8English Text
\xc6\xfc\xcb\xdc\xb8\xec\xa5\xc6\xa5\xad\xa5\xb9\xa5\xc8\xa4\xc8English Text
\xc6\xfc\xcb\xdc\xb8\xec\xa5\xc6\xa5\xad\xa5\xb9\xa5\xc8\xa4\xc8English Text
\xc6\xfc\xcb\xdc\xb8\xec\xa5\xc6\xa5\xad\xa5\xb9\xa5\xc8\xa4\xc8English Text
\xc6\xfc\xcb\xdc\xb8\xec\xa5\xc6\xa5\xad\xa5\xb9\xa5\xc8\xa4\xc8English Text
\xc6\xfc\xcb\xdc\xb8\xec\xa5\xc6\xa5\xad\xa5\xb9\xa5\xc8\xa4\xc8English Text
\xc6\xfc\xcb\xdc\xb8\xec\xa5\xc6\xa5\xad\xa5\xb9\xa5\xc8\xa4\xc8English Text
\xc6\xfc\xcb\xdc\xb8\xec\xa5\xc6\xa5\xad\xa5\xb9\xa5\xc8\xa4\xc8English Text
\xc6\xfc\xcb\xdc\xb8\xec\xa5\xc6\xa5\xad\xa5\xb9\xa5\xc8\xa4\xc8English Text
\xc6\xfc\xcb\xdc\xb8\xec\xa5\xc6\xa5\xad\xa5\xb9\xa5\xc8\xa4\xc8English Text
\xc6\xfc\xcb\xdc\xb8\xec\xa5\xc6\xa5\xad\xa5\xb9\xa5\xc8\xa4\xc8English Text
\xc6\xfc\xcb\xdc\xb8\xec\xa5\xc6\xa5\xad\xa5\xb9\xa5\xc8\xa4\xc8English Text
\xc6\xfc\xcb\xdc\xb8\xec\xa5\xc6\xa5\xad\xa5\xb9\xa5\xc8\xa4\xc8English Text
";

$str = iconv("EUC-JP", "SJIS", $str);
$str = base64_encode($str);
echo $str."\n";
}
